<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:padding="8dp">

	<CheckBox android:id="@+id/fail" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/fail" />

	<CheckBox android:id="@+id/noListener" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/noListener" />

	<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/useCaseTrigger" android:layout_marginTop="16dp"/>
	<RadioGroup android:id="@+id/useCaseTrigger" android:layout_width="match_parent" android:layout_height="wrap_content">
		<RadioButton android:id="@+id/manualUseCaseTrigger" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/manualUseCaseTrigger"/>
		<RadioButton android:id="@+id/onceUseCaseTrigger" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/onceUseCaseTrigger"/>
		<RadioButton android:id="@+id/alwaysUseCaseTrigger" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/alwaysUseCaseTrigger"/>
	</RadioGroup>

	<Button android:id="@+id/execute" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/execute" android:layout_marginTop="16dp" />
</LinearLayout>
