<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:padding="8dp">

	<CheckBox android:id="@+id/fail" android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:text="@string/fail" />

	<Button android:id="@+id/workerService" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/workerService" />
	<Button android:id="@+id/useCaseService" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/useCaseService" />

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Success or UnexpectedException."/>
	<Button android:id="@+id/firebaseJobService" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/firebaseJobService" />

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Fail first try. Success on retry or UnexpectedException"/>
	<Button android:id="@+id/commandService1" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/commandService1" />

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Fail first try. Success on retry or ConnectionException"/>
	<Button android:id="@+id/commandService2" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/commandService2" />

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Success on first try or ConnectionException. Success on retry"/>
	<Button android:id="@+id/commandService3" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/commandService3" />

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Fail first try or UnexpectedException. Success on retry"/>
	<Button android:id="@+id/commandService4" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/commandService4" />

</LinearLayout>
