<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:padding="8dp">

	<Button android:id="@+id/simpleRecycler" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/simpleRecycler" />

	<Button android:id="@+id/complexRecycler" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/complexRecycler" />

	<Button android:id="@+id/paginatedRecycler" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/paginatedRecycler" />

	<Button android:id="@+id/paginatedGridRecycler" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/paginatedGridRecycler" />

	<Button android:id="@+id/searchPaginatedRecycler" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/searchPaginatedRecycler" />

</LinearLayout>
