<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:padding="8dp">

	<Button android:id="@+id/sqliteAdd" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/sqliteAdd" />
	<Button android:id="@+id/sqliteUpdate" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/sqliteUpdate" />
	<Button android:id="@+id/sqliteRemove" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/sqliteRemove" />
	<Button android:id="@+id/sqliteGetAll" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/sqliteGetAll" />

	<TextView android:id="@+id/results" android:layout_width="wrap_content" android:layout_height="wrap_content" />

</LinearLayout>
