<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:padding="8dp">

	<Button android:id="@+id/firebaseCreate" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/firebaseCreate" />

	<Button android:id="@+id/firebaseUpdate" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/firebaseUpdate" />

	<Button android:id="@+id/firebaseGetAll" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/firebaseGetAll" />

	<Button android:id="@+id/firebaseRemove" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/firebaseRemove" />

	<TextView android:id="@+id/results" android:layout_width="wrap_content" android:layout_height="wrap_content" />

</LinearLayout>
