<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:padding="8dp">

	<Button android:id="@+id/registerDevice" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/registerDevice" />

	<Button android:id="@+id/clearRegistrationToken" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/clearRegistrationToken" />

	<Button android:id="@+id/removeInstanceId" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/removeInstanceId" />

	<Button android:id="@+id/removeDevice" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/removeDevice" />

	<Button android:id="@+id/sendPush" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/sendPush" />

</LinearLayout>
